# fml_solver

./: .gitignore  README.md  main.py  opencode.txt  pyproject.toml  requirements.txt  test_suite.py
examples/: always_comb_mux.sv  arbiter_dependent.sv  arbiter_with_sva.sv  assign_basic.sv  counter_bug_wrap.sv  counter_check.sv  counter_overflow.sv  counter_safe.sv  fifo_check.sv  if_else_nested.sv  register_simple.sv
examples/counter_sub/: counter_sub.sv  counter_sub_flat.sv
fml/: __main__.py  cli.py
fml/engine/: __init__.py  aiger.py  base.py  bmc.py  cnf_context.py  cover.py  fan_in.py  ic3.py  kind.py  orchestrator.py  sat_ic3.py  sat_solver.py  simulation.py  solver.py
fml/engine/analysis/: __init__.py  fan_in.py  metrics.py
fml/engine/solver/: __init__.py  abc_bridge.py  cnf_context.py  sat_solver.py  solver.py
fml/ir/: transition_system.py
fml/parser/: eval_expr.py  flatten.py  hier_flatten.py  interface_flattener.py  node_to_z3.py  ot_preproc.py  package_resolver.py  rtl_parser.py  struct_flattener.py  utils.py
fml/utils/: helpers.py
tests/: test_suite.py
