[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "fml-solver"
version = "0.1.0"
description = "Formal verification solver for SystemVerilog RTL"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.16",
    "pyslang>=11.0",
]

[project.scripts]
fml = "fml.main:main"
